[package]
name = "guessing_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] #依赖
rand = "0.8.3" # 0.8.3 事实上是 ^0.8.3 的简写，它表示任何至少是 0.8.3 但小于 0.9.0 的版本 具体版本可以查看[语义化版本（Semantic Versioning）（有时也称为 SemVer）]https://semver.org/